--- a/src/Web.WebApp/Pages/Admin/BudgetJarsPage.razor
+++ b/src/Web.WebApp/Pages/Admin/BudgetJarsPage.razor
@@ -50,7 +50,7 @@
                         @foreach(var icon in IconAssets)
                             {
                              <MudSelectItem Value="@(icon.Id)">
-                                <img src=".@icon.IconUrl" height="24" width="24" class="mr-2" />@icon.Name</MudSelectItem>
+                                <img src="@icon.IconUrl" height="24" width="24" class="mr-2" />@icon.Name</MudSelectItem>
                             }
                         </MudSelect>
                     </MudTd>
