--- a/src/Web.WebApp/Components/Ui/AppOverlay.razor
+++ b/src/Web.WebApp/Components/Ui/AppOverlay.razor
@@ -1,4 +1,5 @@
-﻿<MudOverlay Visible="@IsLoading" DarkBackground="true" Absolute="true" AutoClose="false">
+﻿<MudOverlay Visible="@IsLoading" DarkBackground="true" Absolute="true" AutoClose="false"
+    Style="width: 100%; height: 100%; min-height: 240px;">
     <div style="text-align:center; padding: 16px; border-radius: 8px; background: #ffffff">
         <MudProgressCircular Color="Color.Primary" Indeterminate="true"/><br/>
         <MudText>@Text</MudText>
