--- a/src/Web.WebApp/Pages/BudgetJar/BudgetJarPage.razor
+++ b/src/Web.WebApp/Pages/BudgetJar/BudgetJarPage.razor
@@ -70,9 +70,9 @@
         isLoading = false;
     }
 
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (!firstRender) return;
+    //protected override async Task OnAfterRenderAsync(bool firstRender)
+    //{
+      //  if (!firstRender) return;
 
         // If there is none, create from default jars
         //if (!budgetJars.Any())
@@ -85,7 +85,7 @@
         //    isLoading = false;
         //    StateHasChanged();
         //}
-    }
+    //}
 
     private async Task HandleBudgetJarUpdated(BudgetJarDto jar)
     {
