--- a/src/Web.WebApp/Shared/NavMenu.razor
+++ b/src/Web.WebApp/Shared/NavMenu.razor
@@ -4,14 +4,14 @@
     <AuthorizeView>
         <Authorized>
             <MudNavGroup Title="Expenses" Expanded="true">
-                <MudNavLink Href="/expense/new" IconColor="@Color.Primary" Icon="@Icons.Filled.AddCircle">
+                <MudNavLink Href="/expense/new" IconColor="@Color.Primary" Icon="@Icons.Filled.RemoveCircle">
                     Add Expense
                 </MudNavLink>
                 <MudNavLink Href="/expenses" IconColor="@Color.Primary" Icon="@Icons.Filled.Paid">
-                    My Expenses
+                    Expenses
                 </MudNavLink>
                 <MudNavLink Href="/expensegroups" IconColor="@Color.Primary" Icon="@Icons.Filled.Category">
-                    Expense Groups
+                    Categories
                 </MudNavLink>
             </MudNavGroup>
 
@@ -20,7 +20,7 @@
                     Add Income
                 </MudNavLink>
                 <MudNavLink Href="/incomes" IconColor="@Color.Primary" Icon="@Icons.Filled.AttachMoney">
-                    My Incomes
+                    Incomes
                 </MudNavLink>
                 <MudNavLink Href="/budgetjars" IconColor="@Color.Primary" Icon="@Icons.Filled.AccountTree">
                     Budget Jars
